--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "dust-up"
 version = "0.1.0"
+description = "Docker environment composition"
 authors = ["Ken Valencik <kvalencik@underarmour.com>"]
 
 [dependencies]
+clap = "2"
 futures = "0.1"
 hyper = "0.11"
 hyperlocal = "0.4"
